chamber/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Kanit&family=Karla&display=swap');

:root {
    --primary-color: #38527E;
    --secondary-color: #22314c;
    --accent-color: #D1EAF9;
    --background-color: #cfcfcf;
}

header {
    background-color: var(--primary-color);
    font-family: 'Kanit', sans-serif;
    border: 1px solid black;
    align-items: center;
    justify-content: space-between;
    box-sizing: border-box;
    position: relative;
}

header img {
    width: 5rem;
    padding: 1rem;
}

header h1 {
    width: 10rem;
    text-align: center;
    font-size: 140%;
    color: var(--accent-color);
    margin: 0;
    padding: 0;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

.small-header {
    display: flex;
    align-items: center;
}

.menu {
    background: none;
    border: none;
    position: absolute;
    top: 1rem;
    right: 5%;
    font-size: 2.5rem;
    color: var(--accent-color);
}

.menu::before {
    content: "☰";
    display: flex;
    align-items: center;
}

.menu.open::before {
    content: "✖";
}

.open a {
    display: block;
}

nav {
    display: flex;
    font-size: 1.5rem;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

nav a {
    display: none;
    background-color: var(--secondary-color);
    color: var(--accent-color);
    padding: 0.5rem;
    text-align: center;
    text-decoration: none;
    width: 100%;
}

nav a.active {
    font-weight: bold;
    background-color: var(--accent-color);
    color: var(--primary-color);
}

.switch {
    position: absolute;
    transform: translateY(-50%);
    top: 4.75rem;
    right: 6%;
    width: 36px;
    height: 22px;
    z-index: 1001;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--accent-color);
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 16px;
    width: 16px;
    left: 3px;
    bottom: 3px;
    background-color: var(--primary-color);
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked+.slider {
    background-color: var(--primary-color);
}

input:checked+.slider:before {
    background-color: var(--accent-color);
}

input:focus+.slider {
    box-shadow: 0 0 1px var(--primary-color);
}

input:checked+.slider:before {
    -webkit-transform: translateX(14px);
    -ms-transform: translateX(14px);
    transform: translateX(14px);
}

.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

nav a:hover {
    background-color: var(--secondary-color);
}

main {
    font-family: 'Karla', sans-serif;
    color: var(--secondary-color);
    padding-bottom: 1.5rem;
}

.hero-section {
    position: relative;
}

#hero {
    width: 100%;
    height: auto;
    display: block;
    position: relative;
}

#action {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 0.75rem;
    font-size: 1rem;
    background-color: #cfcfcfa3;
    border: 3px solid #000;
    border-radius: 10px;
    font-weight: bold;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
    cursor: pointer;
    color: var(--secondary-color);
    text-decoration: none;
}

#action:visited {
    color: black;
}

#action:hover {
    color: rgb(70, 70, 70);
}

.spotlights,
.weather {
    margin: 1.5rem;
    padding: 1rem;
    padding-top: 0;
    border: 1px solid gray;
    background-color: var(--accent-color);
}

section.weather {
    margin-bottom: 0.5rem;
}

.weather div {
    text-align: center;
}

.weather input {
    margin-bottom: 0.5rem;
}

.events {
    width: 80%;
    margin: 1rem auto 2rem auto;
}

.events p {
    border: 1px solid gray;
    background-color: var(--background-color);
    padding: 1rem;
}

section h2 {
    font-size: 1.5rem;
    margin-bottom: 0.25rem;
    font-family: "Kanit", sans-serif;
    text-align: center;
    border-bottom: 1px solid gray;
}

section p {
    margin-bottom: 0.5rem;
}

footer {
    background-color: var(--primary-color);
    padding-top: 1rem;
    text-align: center;
    font-family: 'Karla', sans-serif;
    font-size: 1.1rem;
    display: grid;
    grid-template-columns: 1.25fr 2fr;
    grid-gap: 1rem;
    color: var(--accent-color);
    border: 1px solid black;
    box-sizing: border-box;
}

.footer-info {
    grid-column: 1/3;
    border-top: 1px solid var(--accent-color);
}

.footer-info p {
    margin: 0.75rem;
}

footer img {
    width: 6rem;
    display: flex;
    grid-column: 1/2;
    margin-top: 2.25rem;
    margin: auto;
}

.contact-info {
    grid-column: 2/3;
    margin: auto;
}

.site-name {
    font-weight: bold;
}

.footer-break {
    display: none;
}

.dark-mode {
    background-color: #000;
    border-color: #eee;
}

main.dark-mode {
    background-color: var(--secondary-color);
}

.dark-mode .events h2 {
    color: var(--accent-color);
}

.dark-mode .events h3 {
    color: white;
}

.dark-mode .menu {
    color: var(--primary-color);
}

.dark-mode .demographics {
    color: var(--accent-color);
}

#discover {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.local-photos {
    width: 86%;
    height: auto;
    margin-top: 1.5rem;
    margin-left: 7%;
    margin-right: auto;
}

.local-photos img {
    width: 100%;
    height: auto;
}

.local-photos p {
    text-align: center;
    margin-top: 0.5rem;
    margin-bottom: 1.5rem;
}

.demographics {
    background-color: var(--background-color);
    width: 70%;
    padding: 4%;
    text-align: center;
    margin-left: 10%;
    margin-right: auto;
}

.demographics h2 {
    font-size: 1.25rem;
    margin: 0.5rem 0 0;
}

.demographics p {
    margin: 0.5rem 0 0;
    font-size: 0.8rem
}

.city-council {
    text-align: center;
}

#lastVisit {
    text-align: center;
}

.dark-mode .right-content,
.dark-mode .left-content {
    color: var(--accent-color);
}

.dark-mode .demographics {
    color: var(--secondary-color);
}

#join-form {
    padding: 1.5rem;
    width: 80%;
    margin: auto;
}

#error-message {
    margin-bottom: 1rem;
}

.join h2 {
    margin: 0;
}

#user-info,
#business-info {
    background: var(--background-color);
    padding: 1.5rem;
    padding-bottom: 0.75rem;
    margin-bottom: 1.5rem;
}

form input,
form textarea {
    margin-bottom: 1.5rem;
    width: 100%;
    height: 2rem;
    display: block;
    margin: auto;
    box-sizing: border-box;
}

table {
    border: thin solid var(--secondary-color);
    border-collapse: collapse;
    width: 100%;
    color: var(--secondary-color);
    text-align: center;
}

td {
    color: var(--secondary-color);
    font-weight: bold;
    font-size: 1rem;
    border: thin solid black;
}

thead th {
    background-color: var(--primary-color);
    color: var(--accent-color);
    padding: 0.25rem;
    border: thin solid black;
}

.table-title {
    background-color: var(--secondary-color);
    color: var(--accent-color);
}

tbody tr:nth-child(even) {
    background-color: var(--background-color);
}

tbody tr td {
    padding: 0.25rem;
}

caption {
    caption-side: bottom;
    font-size: 1.1rem;
}

legend {
    font-weight: bold;
    color: var(--secondary-color)
}

#benefit-level {
    margin-bottom: 1rem;
}

#join-form button {
    display: block;
    width: 40%;
    margin: 0 auto;
    color: var(--accent-color);
    font-weight: bold;
    background-color: var(--secondary-color);
}

.dark-mode legend {
    background-color: var(--accent-color);
    padding: 0.4rem;
    box-shadow: 5px 5px 5px var(--secondary-color);
}

.dark-mode #join-form button {
    background-color: var(--accent-color);
    color: var(--secondary-color);
}

#membership-benefits.dark-mode th,
#membership-benefits.dark-mode td {
    border: 2px solid white;
}

#membership-benefits.dark-mode thead th {
    background-color: var(--secondary-color);
    color: var(--accent-color);
    padding: 0.25rem;
}

.dark-mode #membership-benefits tbody tr:nth-child(odd) {
    background-color: var(--accent-color);
}

.dark-mode #membership-benefits tbody tr:nth-child(even) {
    background-color: var(--background-color);
}

.dark-mode #membership-benefits {
    border: 2px solid white;
}

.dark-mode #membership-benefits .table-title {
    background-color: black;
}

.dark-mode #membership-benefits caption {
    color: var(--accent-color);
}

.dark-mode nav.open a {
    background-color: var(--accent-color);
    color: var(--secondary-color);
}

div.cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    grid-gap: 10px;
    width: 100%;
}

section.card {
    background-color: var(--background-color);
    margin: 2rem auto;
    height: 300px;
    width: 22rem;
    padding-bottom: 1rem;
    border: 2px solid black;
    box-shadow: 8px 8px 15px black;
}

.card p,
section.card a {
    display: flex;
    margin: auto;
    justify-content: center;
    padding: 0.25rem;
}

img.logo {
    padding: 1.5rem 1rem 0.25rem;
    display: flex;
    margin: auto;
    margin-bottom: 0;
    height: 200px;
    width: auto;
}

.list {
    display: flex;
    padding: 2rem 1rem;
}

.directory {
    text-align: center;
}

section.item {
    display: flex;
    width: 100%;
    justify-content: center;
}

section.item p,
section.item a {
    width: 25%;
    margin: auto 0.5rem;
    padding: 1rem 0;
}

.list section:nth-child(odd) {
    background-color: var(--accent-color);
}

.list section:nth-child(even) {
    background-color: white;
}

h2#title {
    margin-bottom: 1rem;
    padding: 3rem 0 1rem;
    color: var(--secondary-color);
    font-size: 1.75rem;
    margin-top: 0;
}

.dark-mode h2#title {
    color: white;
}

#gridview,
#listview {
    padding: 1rem;
    margin: 0 1rem;
    background-color: var(--accent-color);
    font-size: 1.25rem;
}

#weather-icon {
    height: 100%;
    justify-self: left;
    margin: auto 0;
}

figure {
    display: flex;
    margin: 0 auto;
    justify-content: center;
}

#weather-info {
    display: flex;
    justify-content: center;
    text-align: center;
}

#forecast-table tbody:nth-child(odd) {
    background-color: white;
}

.forecast-title {
    background-color: var(--secondary-color);
}

#banner {
    position: sticky;
    top: 0;
    background-color: var(--accent-color);
    padding: 0.25rem;
    text-align: center;
    z-index: 1000;
    font-family: 'Karla', sans-serif;
}

#banner h3 {
    width: 80%;
    margin: 1rem auto;
    color: var(--secondary-color);
    font-size: 1rem;
}

#banner.close {
    display: none;
}

#bannerButton {
    position: absolute;
    background-color: var(--secondary-color);
    right: 6px;
    top: 6px;
    color: var(--accent-color);
    font-weight: bold;
}

.spotlights .cards {
    display: block;
}

.spotlights .cards .card {
    display: grid;
    grid-template-columns: 1fr 1.75fr;
    margin: 1rem auto;
    width: 85%;
    height: 8rem;
}

.spotlights img {
    height: 100px;
    margin: auto 0;
    grid-row: 1/4;
}

.spotlights p,
.spotlights a {
    grid-column: 2/3;
    text-align: center;
    margin: auto;
}

.thankyou {
    text-align: center;
    padding: 8rem 2.5rem 10rem;
}

.thankyou.dark-mode {
    color: white;
}

